# physical_ai_championship

./: .gitignore  APPROACH.md  README.md  setup.sh
g1_ctrl/: CMakeLists.txt
g1_ctrl/config/policy/velocity/v0/params/: deploy.yaml
simulate/: CMakeLists.txt  config.yaml
simulate/src/: auto_search.h  main.cc  param.h  unitree_sdk2_bridge.h
unitree_robots/g1/: g1_29dof.xml  scene_room.xml
